# harnessy

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  EXPERIMENT_GUIDE.md  EXPERIMENT_IMPLEMENTATION.md  EXPERIMENT_VERIFICATION.md  FILE_INDEX.md  README.md  START_HERE.md  flow-install.lock.json  harnessy.lock.json  install.sh  package.json  program.md  results.csv
.jarvis/: hooks.yaml
Jarvis/: AGENTS.md  README.md  flow-install.lock.json  pyproject.toml
Jarvis/specs/00_roadmap/: brainstorm.md
Jarvis/specs/01_task-scheduler/: MVP_technical_spec.md  brainstorm.md  product_spec.md  technical_spec.md
Jarvis/specs/02_journaling/: brainstorm.md  product_spec.md  technical_spec.md
Jarvis/specs/03_task-creation/: .build-e2e-state.json  brainstorm.md  product_spec.md  technical_spec.md
Jarvis/specs/04_backend-abstraction/: .build-e2e-state.json  brainstorm.md  product_spec.md  technical_spec.md
Jarvis/specs/04_backend-abstraction/qa/: user-test-script.md
Jarvis/specs/05_weekly-planning/: .build-e2e-state.json  brainstorm.md  product_spec.md  technical_spec.md
Jarvis/specs/06_journal-file-capture/: product_spec.md  technical_spec.md
Jarvis/specs/07_intelligent-reschedule-calendar/: .build-e2e-state.json  MVP_technical_spec.md  brainstorm.md  brainstorm_transcript.md  prd_review_summary.md  product_spec.md  technical_spec.md  techspec_review_summary.md
Jarvis/specs/08_agent-memory-system/: .build-e2e-state.json  brainstorm.md  brainstorm_transcript.md  prd_review_summary.md  product_spec.md  tech_debt.md  technical_spec.md  techspec_review_summary.md
Jarvis/src/jarvis/: __init__.py  __main__.py  anytype_client.py  cli.py  context_reader.py  prompts.py
Jarvis/src/jarvis/adapters/: __init__.py
Jarvis/tests/: test_adapter_exceptions.py  test_adapter_retry.py  test_capability_checking.py  test_config_schema.py  test_context_reader.py  test_planning_service.py  test_reading_list_cache.py  test_reading_list_parser.py  test_reading_list_prioritizer.py  test_services.py  test_state.py
Jarvis/tests/integration/: test_notion_adapter.py  test_reading_list_anytype.py
Jarvis/tests/journal/: test_capture.py  test_cli.py  test_hierarchy.py  test_models.py  test_prompts.py  test_state.py
Jarvis/tests/plan/: test_gaps.py
Jarvis/tests/task/: __init__.py  test_editor.py  test_integration_qa.py
Jarvis/tools/skill_guardrails/: validate_skill_paths.py
(+613 files in other folders)
